# ORB-Trading-System

./: .gitignore  Orb System Spec.docx  README.md  RESUME_CONTENT.md  orb_system_spec.md  pyproject.toml  setup_api_key.py
config/: assets.yaml  core.yaml  train.yaml
orb/: __init__.py
orb/cli/: __init__.py  train.py
orb/data/: __init__.py  feature_builder.py  polygon_loader.py
orb/data/mechmodel/: __init__.py  ifvg_finder.py  mss_detector.py  pipeline.py  smt_divergence.py  sweep_detector.py  swing_utils.py
orb/evaluation/: __init__.py  walkforward.py
orb/models/: __init__.py  base_model.py  lgbm_model.py
orb/reporting/: __init__.py
orb/tuning/: __init__.py  optuna_tuner.py
orb/utils/: __init__.py  calendars.py  logging.py
tests/: __init__.py  test_calendars.py  test_data_layer.py  test_mech_features.py  test_model_layer.py
