[tool.poetry]
name = "orb-system"
version = "0.1.0"
description = "ORB Intraday Meta-Model System - Automated Opening-Range-Breakout trading strategy"
authors = ["ORB Trading System"]
readme = "README.md"
packages = [{include = "orb"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
polars = "^0.20.0"
lightgbm = "^4.0.0"
torch = "^2.0.0"
hydra-core = "^1.3.0"
mlflow = "^2.8.0"
optuna = "^3.4.0"
typer = "^0.9.0"
requests = "^2.31.0"
httpx = "^0.25.0"
pyarrow = "^13.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
joblib = "^1.3.0"
shap = "^0.43.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.17.0"
python-dateutil = "^2.8.0"
pytz = "^2023.3"
tqdm = "^4.66.0"
pydantic = "^2.5.0"
rich = "^13.7.0"
pandas-market-calendars = "^4.0.0"
python-dotenv = "^1.0.0"
ta = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"
httpx-mock = "^0.11.0"

[tool.poetry.scripts]
orb = "orb.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true 